src/test/deca/syntax/invalid/lexer/system/string_quotes.deca
// Description:
//    test of corrupted string (with quotes)
//
// Results:
//    test_lex --> error line 10
//
// History:
//    created on 04/01/2022

"lalala"lalala"